--- a/css/styles.css
+++ b/css/styles.css
@@ -10790,75 +10790,88 @@ p {
   color: white;
 }
 
-.custom-select-style {
-  width: 170px;
-  height: 56px;
-  background-color: RED;
-  font-size: 0.9rem;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
+#datalist-ingredients, #datalist-appliance, #datalist-ustensils {
   position: relative;
-  border-radius: 5px;
-  color: #111;
-  margin: 0;
-  text-decoration: none;
-  justify-content: center;
-}
-.custom-select-style p {
-  color: white;
-  font-size: 1.2em;
-  line-height: 56px;
 }
 
-.custom-select-style::after {
+#datalist-ingredients.active #datalist-ingredients-options,
+#datalist-appliance.active #datalist-appliance-options,
+#datalist-ustensils.active #datalist-ustensils-options {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  content: "<";
-  transform: rotate(90deg);
-  width: 40px;
-  height: 56px;
-  color: #fff;
-  font-size: 1.6rem;
-  position: absolute;
-  right: 5px;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-/* =========== */
-.custom-list {
+#search-ingredients,
+#search-appliance,
+#search-ustensils {
+  padding-left: 1em;
   width: 100%;
-  height: 170px;
-  margin-top: -50px;
-  position: absolute;
-  top: 50px;
-  left: 0;
+  height: 54px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: none;
+  border: none;
+  outline: 0;
+}
+
+#search-ingredients:focus,
+#search-appliance:focus,
+#search-ustensils:focus {
+  border: 1px solid #AA0000;
+  outline: 0;
+}
+
+#datalist-ingredients.active i,
+#datalist-appliance.active i,
+#datalist-ustensils.active i {
+  transform: rotate(270deg);
+}
+
+#datalist-ingredients-options {
+  background-color: #3282F7;
+}
+#datalist-appliance-options {
+  background-color: #68D9A4;
+}
+#datalist-ustensils-options {
+  background-color: #ED6454;
+}
+
+#datalist-ingredients-options,
+#datalist-appliance-options,
+#datalist-ustensils-options {
   display: none;
-  background-color: RED;
-  border-radius: 5px;
+  position: absolute;
+  margin: -3px 0 0 0;
+  padding: 0;
+  width: 100%;
+  max-height: 600px;
+  top: 100%;
+  left: 0;
+  list-style: none;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   overflow: hidden;
+  overflow-y: auto;
+  z-index: 100;
 }
 
-.custom-list-visible {
+#datalist-ingredients-options li,
+#datalist-appliance-options li,
+#datalist-ustensils-options li {
   display: block;
-}
-
-.custom-list-element {
-  width: 150px;
-  height: 56px;
-  background-color: RED;
-  border-bottom: 1px solid #eee;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: left;
   color: white;
-  margin: 0 auto;
-  font-size: 1.2em;
-  text-decoration: none;
   cursor: pointer;
 }
-.custom-list-element:last-child {
-  border: none;
+
+#datalist-ingredients-options li:hover,
+#datalist-appliance-options li:hover,
+#datalist-ustensil-options li:hover {
+  background: #4e00f0;
+  color: #f00;
 }
 
 /*# sourceMappingURL=styles.css.map */
