ajout de la fonctionnalité de mise à jours des tag en fonction des recettes restante

--- a/css/styles.css
+++ b/css/styles.css
@@ -10790,6 +10790,10 @@ p {
   color: white;
 }
 
+#no-recette {
+  font-size: 20px;
+}
+
 #chooseTags {
   display: flex;
   justify-content: start;
